--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=datingapp.db"
+    "DefaultConnection": "Data source=datingapp.db",
+    "DefaultSQLServer": "Server=tcp:devdatingapp.database.windows.net,1433;Initial Catalog=API_db;Persist Security Info=False;User ID=devapp;Password=p@ssw0rd123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
