End of Section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,8 +1,9 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db",
-    "DefaultSQLServer": "Server=tcp:devdatingapp.database.windows.net,1433;Initial Catalog=API_db;Persist Security Info=False;User ID=devapp;Password=p@ssw0rd123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultSQLServer": "Server=DESKTOP-DAREM76\\SQLEXPRESS; Database=datingapp; Trusted_Connection=True; Integrated Security=False; User=sa; Password=p@ssw0rd;"
   },
+  "TokenKey": "super secret unguessable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
